# mcp-guardian

./: .gitignore  Dockerfile  LICENSE  README.ar.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml
scripts/: install_guardian_hook.sh
src/mcp_guardian/: patterns.py  server.py
