[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-guardian"
version = "0.1.0"
description = "Privacy firewall for AI-powered development — blocks secrets, PII, and internal keywords from reaching GitHub."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mcp-guardian contributors" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "privacy",
    "secrets",
    "pii",
    "pre-commit",
    "github",
    "ai-safety",
    "firewall",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
mcp-guardian = "mcp_guardian.server:main"

[project.urls]
Source = "https://github.com/nerin81-netizen/mcp-guardian"
Issues = "https://github.com/nerin81-netizen/mcp-guardian/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_guardian = ["py.typed"]
